# agent_test

./: .gitignore  DISPLAY_FIXES.md  README.md  REFACTORING_SUMMARY.md  example_usage.py  gradio_app.py  gradio_app_2.py  main.py  pyproject.toml  test_display.py  test_refactored.py  test_suite.py
.claude/: settings.local.json
multi_tool_agent/: agent.py
scripts/: simple_agent.py
src/: __init__.py  agent_manager.py  app.py  config.py  document_comparator.py  document_extractor.py  error_handler.py  pdf_processor.py  preprocessing.py  server.py
src/agent/: __init__.py  agent.py
src/agents/: coordinator_agent.py  multi_agent_orchestrator.py  specialist_agents.py
src/chat/: controller.py  data_models.py  route.py
src/core/: config.py
src/services/: session_service.py
src/tool/: data_models.py  route.py
