[project]
name = "agentdevelopmentkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.15.1",
    "docx2txt>=0.9",
    "fuzzywuzzy>=0.18.0",
    "google-adk>=0.4.0",
    "gradio>=5.33.0",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "spacy>=3.8.4",
    "streamlit>=1.45.1",
    "transformers>=4.51.3",
]
